--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,7 @@ Build-Depends-Indep: debhelper (>= 5.0.0)
 Standards-Version: 3.9.0
 Homepage: http://pibang.org/
 
+depends: gzip
 Package: pibang-backgrounds
 Architecture: all
 Description: Backgrounds for PiBang Linux
